--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <h3>Hyresvärdar</h3>
         <input id="sgscheck" type="checkbox" onchange="filterMarkers(this)" name="sgs" value="1" checked="true">Sgs<br>
         <input id="bostadsbolagetcheck" type="checkbox" onchange="filterMarkers(this)" name="bostadsbolaget" value="2" checked="true">Bostadsbolaget<br>
-        Hyresvärd:<div id="info-box"></div>
-        Fastighetsbeteckning:<div id="info-box2"></div>
+        <!-- Hyresvärd:<div id="info-box"></div>
+        Fastighetsbeteckning:<div id="info-box2"></div> -->
+        <img id="iconen" src="" />
+        <button id="tabort">delet</button>
+        <button id="visa">visa</button>
       </div>
         <div id="map"></div>
     </div>
