--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <link rel="icon" href="../assets/images/favicon3.ico" type="image/x-icon">
 </head>
 <body>
-  <!-- <div class="header">
-    <img style="width: auto; height:46px" src="../assets/images/cityscape.png" />
-    <h1 style="margin-left: 12px;">Hyresvärdskartan</h1>
-  </div> -->
     <div class="content">
       <div class="sidebar">
         <div class="header">
-          <img src="../assets/images/kartanlogo2.png" />
+          <img class="kartanlogo" src="../assets/images/kartanlogo2.png" />
           <h3>Hyresvärdskartan</h3>
           <div class="navigation__toggle js-navigation__toggle">
             <div class="navigation__toggle-icon">
@@ -30,11 +26,11 @@
                 <input id="ernstrosencheck" type="checkbox" onchange="filterMarkers(this)" name="ernstrosen" value="7" checked="true">Ivar Kjellberg<br>
                 <input id="sgscheck" type="checkbox" onchange="filterMarkers(this)" name="sgs" value="8" checked="true">Västerstaden<br>
                 <input id="ernstrosencheck" type="checkbox" onchange="filterMarkers(this)" name="ernstrosen" value="10" checked="true">Skanses fastigheter<br>
+                <input id="ernstrosencheck" type="checkbox" onchange="filterMarkers(this)" name="ernstrosen" value="11" checked="true">Familjebostäder<br>
+                <input id="ernstrosencheck" type="checkbox" onchange="filterMarkers(this)" name="ernstrosen" value="12" checked="true">Bygg-Göta<br>
             </div>
         </div>
         <div class="sidebar-footer">
-          <!-- <a href="#"><p>Kontakt</p></a>
-          <a href="./kartan.html"><p>Om kartan</p></a> -->
           <p style="color: lightgrey; margin-top: 20px;">© Copyright 2018 Hyresvärdskartan</p>
         </div>
       </div>
