--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Hyresvärdskartan</title>
-    <link rel="icon" href="../assets/images/favicon3.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon3.ico" type="image/x-icon">
 </head>
 <body>
     <div class="content">
